# TrWebOCR.cpp

./: .gitmodules  CMakeLists.txt  README.md  img.txt
backend-cpp/: CMakeLists.txt
backend-cpp/csrc/: main.cc  tr.h
backend-cpp/tr/: tr.py
backend/tr/: tr.py
backend/webInterface/: tr_run.py
csrc/: main.cc  tr.h  tr_utils.h  tr_worker.cc  tr_worker.h  tr_wrapper.cc  tr_wrapper.h
docs/: log_cpp_0829.txt  log_trwebocr.txt  stat.py  stat2.py
scripts/: request_1000.py  test.py  test_api.py  test_health.py
